--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@nuxt/content": "^2.4.3",
+    "@tailwindcss/typography": "^0.5.9",
     "nuxt": "^3.1.2"
   },
   "dependencies": {
