--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.3.1",
-    "daisyui": "^2.50.0"
+    "daisyui": "^2.50.0",
+    "ol": "^6.9.0",
+    "vue3-openlayers": "^0.1.54"
   }
 }
