--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "devDependencies": {
     "@nuxt/content": "^2.4.3",
     "@tailwindcss/typography": "^0.5.9",
-    "nuxt": "^3.1.2"
+    "nuxt": "^3.1.2",
+    "nuxt-icon": "^0.2.11"
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.3.1",
